# EXCLAIM_coupled_setup

./: .gitignore  EXCLAIM_COUPLED_R02B07.run  README.md  benchmark.sh  benchmark_acc.sh  benchmark_r02b07.sh  exp.EXCLAIM_COUPLED.run  inputs.sh  launch_exp.sh  namelists.sh  recipe_dsl.txt  run_coupled.sh  settings_R02B07-R02B07.sh  settings_R02B08-R02B09.sh  settings_R02B10-R02B10.sh
Common/: hybrid_wrapper.sh  hybrid_wrapper_nsys.sh  tools.sh
R02B07/: EXCLAIM_COUPLED_R02B07.run  exp.EXCLAIM_COUPLED_R02B07.run  inputs.sh  install_py_run_utils.sh  namelists.sh
R02B08-R02B09/: exp.EXCLAIM_COUPLED_R02B08-R02B09.run  inputs.sh  namelists.sh
R02B10-R2B10/: exp.EXCLAIM_COUPLED_R02B10-R02B10.run  inputs.sh  namelists.sh
build-utils/: build-tools.sh
build_utils/: build_tools.sh  full_build.sh  icon-hybrid.patch  santis.cpu_nospack.nvhpc  santis.cpu_ocean.nvidia  santis.gpu_coupled.nvidia  spack_cpu.yaml  spack_gpu.yaml
build_utils/config_cscs/: SPACK_TAG_SANTIS  santis.gpu_nospack.nvhpc  spack_install
build_utils/config_cscs/spack/santis_cpu_double/: spack.yaml
build_utils/patches/: gmean_acc.patch  mo_hsm_class.f90.patch
experiments/: archive.sh  exp.EXCLAIM_COUPLED.run  inputs.sh  namelists.sh  settings_R02B07-R02B07.sh  settings_R02B08-R02B09.sh  settings_R02B09-R02B09.sh  settings_R02B10-R02B10.sh
run-utils/: nsys_wrapper.sh  run-tools.sh
run_utils/: cpu_wrapper.sh  create_slurm_hostfile.py  gpu_wrapper.sh  hybrid_wrapper.sh  lib_on_ram_disc.sh  mybcast.c  run_tools.sh
run_utils/py_run_utils/: install.sh  main.py  pyproject.toml
run_utils/py_run_utils/src/py_run_utils/: create_slurm_hostfile.py  dates.py  main.py
run_utils/run_wrappers/: cpu-cpu_atm_wrapper.sh  cpu-cpu_oce_wrapper.sh  cpu_atm-oce_wrapper.sh  hybrid_atm_wrapper.sh  hybrid_oce_wrapper.sh
spack/santis_cpu_double/: spack.yaml
spack/santis_gpu_double_py_substitute/: spack.yaml
(+2 files in other folders)
