[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "py-run-utils"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["isoduration"]

[project.scripts]
date_add = "py_run_utils.dates:date_add"
date_min = "py_run_utils.dates:date_min"
date_cycle = "py_run_utils.dates:date_cycle"
create_slurm_hostfile = "py_run_utils.create_slurm_hostfile:main"

[tool.hatch.build.targets.sdist]
include = [
  "src/py_run_utils/",
]
